implemented RAG tool WIP

--- a/notebook/experimentation.ipynb
+++ b/notebook/experimentation.ipynb
@@ -2,145 +2,242 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c43287a7",
+   "execution_count": null,
+   "id": "abaf038c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.db_connector import DBConnector\n",
-    "from typing import List"
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "from langchain_groq import ChatGroq\n",
+    "from langchain_community.document_loaders import PyPDFDirectoryLoader \n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.embeddings import HuggingFaceEmbeddings \n",
+    "# Changed: Import Chroma instead of FAISS\n",
+    "from langchain_chroma import Chroma \n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
+    "from langchain_core.prompts import ChatPromptTemplate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e67933dd",
+   "execution_count": 17,
+   "id": "3a65b746",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dbconnector = DBConnector()"
+    "# 1. Load environment variables (for API key)\n",
+    "load_dotenv()\n",
+    "groq_api_key = os.getenv(\"GROQ_API_KEY\")\n",
+    "if not groq_api_key:\n",
+    "    raise ValueError(\"GROQ_API_KEY not found in environment variables. Please set it.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c045adf0",
+   "execution_count": 26,
+   "id": "2c53b023",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Configuration ---\n",
+    "MODEL_NAME = \"deepseek-r1-distill-llama-70b\"\n",
+    "EMBEDDING_MODEL_NAME = \"sentence-transformers/all-MiniLM-L6-v2\" \n",
+    "\n",
+    "# Changed: Define the directory path where your PDFs are located\n",
+    "PDF_DIRECTORY = \"../docs\" \n",
+    "\n",
+    "CHROMA_DB_PATH = \"chroma_index_hf_directory\" # Changed index path for clarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5f3af627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- 2. Initialize LLM from Groq ---\n",
+    "llm = ChatGroq(\n",
+    "    api_key=groq_api_key,\n",
+    "    model_name=MODEL_NAME,\n",
+    "    temperature=0.7 \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d0c87df4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connection to the database established successfully.\n"
+      "Loading documents from directory: ../docs...\n",
+      "Loaded 31 raw documents (pages).\n",
+      "Splitting documents into chunks...\n",
+      "Created 61 chunks from all documents.\n",
+      "Generating embeddings using sentence-transformers/all-MiniLM-L6-v2 and creating ChromaDB vector store...\n",
+      "ChromaDB vector store created and persisted.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<connection object at 0x000001BDBF954D00; dsn: 'user=postgres password=xxx dbname=insurancedb host=4.213.75.90 port=5432', closed: 0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dbconnector.connect()"
+    "# --- 3. Document Loading and Processing (Indexing Phase) ---\n",
+    "\n",
+    "# Check if ChromaDB data already exists to avoid re-processing\n",
+    "# ChromaDB handles persistence by checking the persist_directory\n",
+    "if os.path.exists(CHROMA_DB_PATH) and os.listdir(CHROMA_DB_PATH):\n",
+    "    print(f\"Loading existing ChromaDB from {CHROMA_DB_PATH}...\")\n",
+    "    embeddings = HuggingFaceEmbeddings(model_name=EMBEDDING_MODEL_NAME)\n",
+    "    # Changed: Initialize Chroma with persist_directory\n",
+    "    vector_store = Chroma(persist_directory=CHROMA_DB_PATH, embedding_function=embeddings)\n",
+    "    print(\"ChromaDB loaded.\")\n",
+    "else:\n",
+    "    print(f\"Loading documents from directory: {PDF_DIRECTORY}...\")\n",
+    "    \n",
+    "    if not os.path.exists(PDF_DIRECTORY):\n",
+    "        raise FileNotFoundError(f\"The specified PDF directory does not exist: {PDF_DIRECTORY}\")\n",
+    "\n",
+    "    loader = PyPDFDirectoryLoader(path=PDF_DIRECTORY, glob=\"**/*.pdf\", recursive=True)\n",
+    "    documents = loader.load()\n",
+    "\n",
+    "    if not documents:\n",
+    "        print(f\"No PDF documents found in {PDF_DIRECTORY}. Please check the path and content.\")\n",
+    "        exit() \n",
+    "\n",
+    "    print(f\"Loaded {len(documents)} raw documents (pages).\")\n",
+    "    \n",
+    "    print(f\"Splitting documents into chunks...\")\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(\n",
+    "        chunk_size=1000,\n",
+    "        chunk_overlap=200\n",
+    "    )\n",
+    "    chunks = text_splitter.split_documents(documents)\n",
+    "    print(f\"Created {len(chunks)} chunks from all documents.\")\n",
+    "\n",
+    "    print(f\"Generating embeddings using {EMBEDDING_MODEL_NAME} and creating ChromaDB vector store...\")\n",
+    "    embeddings = HuggingFaceEmbeddings(model_name=EMBEDDING_MODEL_NAME, model_kwargs={'device': 'cpu'}) \n",
+    "\n",
+    "    # Changed: Create ChromaDB from documents, specifying the persist_directory\n",
+    "    vector_store = Chroma.from_documents(\n",
+    "        chunks, \n",
+    "        embeddings, \n",
+    "        persist_directory=CHROMA_DB_PATH\n",
+    "    )\n",
+    "    print(\"ChromaDB vector store created and persisted.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a624a9e4",
+   "execution_count": 29,
+   "id": "1f043749",
    "metadata": {},
    "outputs": [],
    "source": [
-    "select_query = \"SELECT * from policies;\"\n",
-    "results = dbconnector.execute_query(select_query, fetch_results=True)"
+    "# --- 4. Setup Retrieval Chain (Querying Phase) ---\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(\"\"\"\n",
+    "Answer the following question based only on the provided context.\n",
+    "If you don't know the answer, just say \"I don't know\" and do not try to make up an answer.\n",
+    "\n",
+    "Context: {context}\n",
+    "\n",
+    "Question: {input}\n",
+    "\"\"\")\n",
+    "retriever = vector_store.as_retriever()\n",
+    "\n",
+    "document_chain = create_stuff_documents_chain(llm, prompt)\n",
+    "\n",
+    "retrieval_chain = create_retrieval_chain(retriever, document_chain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5edac3ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils.models import Customer,Nominee,Policy,Endorsement,Claim,ConversationHistory,convert_db_row_to_model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "23739477",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "policy_columns = [\n",
-    "        'policy_id', 'customer_id', 'policy_type', 'insurer_name',\n",
-    "        'start_date', 'end_date', 'sum_insured', 'premium_amount', 'policy_status'\n",
-    "    ]\n",
-    "customers = []\n",
-    "for row in results:\n",
-    "    customer = convert_db_row_to_model(row, Policy)\n",
-    "    customers.append(customer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5669ac5e",
+   "execution_count": 31,
+   "id": "66969c0f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('POL2023001', 1, 'Health', 'Star Health Insurance', datetime.date(2023, 1, 15), datetime.date(2024, 1, 14), Decimal('500000.00'), Decimal('15000.00'), 'active', datetime.datetime(2025, 7, 2, 11, 26, 4, 741164, tzinfo=datetime.timezone.utc))\n",
-      "('POL2023002', 2, 'Car', 'ICICI Lombard', datetime.date(2023, 3, 20), datetime.date(2024, 3, 19), Decimal('750000.00'), Decimal('22000.00'), 'active', datetime.datetime(2025, 7, 2, 11, 26, 4, 741164, tzinfo=datetime.timezone.utc))\n",
-      "('POL2022003', 3, 'Life', 'LIC', datetime.date(2022, 6, 1), datetime.date(2042, 6, 1), Decimal('10000000.00'), Decimal('50000.00'), 'active', datetime.datetime(2025, 7, 2, 11, 26, 4, 741164, tzinfo=datetime.timezone.utc))\n",
-      "('POL2023004', 4, 'Fire', 'HDFC ERGO', datetime.date(2023, 5, 10), datetime.date(2024, 5, 9), Decimal('2500000.00'), Decimal('8000.00'), 'expired', datetime.datetime(2025, 7, 2, 11, 26, 4, 741164, tzinfo=datetime.timezone.utc))\n",
-      "('POL2023005', 1, 'Car', 'Go Digit', datetime.date(2023, 8, 1), datetime.date(2024, 7, 31), Decimal('600000.00'), Decimal('18000.00'), 'active', datetime.datetime(2025, 7, 2, 11, 26, 4, 741164, tzinfo=datetime.timezone.utc))\n",
-      "('POL2021006', 5, 'Health', 'Care Health Insurance', datetime.date(2021, 9, 1), datetime.date(2022, 8, 31), Decimal('300000.00'), Decimal('12000.00'), 'cancelled', datetime.datetime(2025, 7, 2, 11, 26, 4, 741164, tzinfo=datetime.timezone.utc))\n"
+      "\n",
+      "--- RAG System Ready ---\n",
+      "\n",
+      "--- Processing Question 1/1 ---\n",
+      "Question: Can you tell me about the company overview of evergreen assurance ltd??\n",
+      "\n",
+      "Searching for relevant information...\n",
+      "\n",
+      "--- Answer ---\n",
+      "<think>\n",
+      "Okay, I need to answer the question about the company overview of Evergreen Assurance Ltd. using the provided context. Let me read through the context carefully.\n",
+      "\n",
+      "The context starts with a disclaimer stating it's a summary of products and general terms, so it's illustrative and not the official policy. Then it goes into the company overview.\n",
+      "\n",
+      "From the context, Evergreen Assurance Ltd. is described as a premier insurance provider in India. Their mission is to secure customers' financial futures with transparent, innovative, and customer-centric products. They aim to be a steadfast partner to policyholders, offering peace of mind and robust protection against life's uncertainties. The document outlines their product portfolio and terms, serving as a comprehensive knowledge base.\n",
+      "\n",
+      "I should structure the answer to include all these points clearly. Make sure to mention their commitment to transparency, innovation, and customer focus, as well as their role as a trusted partner providing financial security.\n",
+      "</think>\n",
+      "\n",
+      "**Company Overview of Evergreen Assurance Ltd.**\n",
+      "\n",
+      "Evergreen Assurance Ltd. is a leading insurance provider in India, dedicated to safeguarding the financial future of its customers. The company offers a range of transparent, innovative, and customer-centric products designed to provide peace of mind and robust protection against life's uncertainties. Committed to being a steadfast partner to its policyholders, Evergreen Assurance Ltd. ensures a comprehensive approach to financial security through its diverse product portfolio and clear terms.\n",
+      "\n",
+      "--- Sources (if available) ---\n",
+      "- Source: ..\\docs\\General.pdf, Page: 0\n",
+      "- Source: ..\\docs\\General.pdf, Page: 8\n",
+      "- Source: ..\\docs\\InsuranceNotes.pdf, Page: 1\n",
+      "------------------------------\n",
+      "\n",
+      "--- All static questions processed. Exiting. ---\n"
      ]
     }
    ],
    "source": [
-    "for rows in results:\n",
-    "    print(rows)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3f8501c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Policy(policy_id='POL2023001', customer_id=1, policy_type='Health', insurer_name='Star Health Insurance', start_date='2023-01-15', end_date='2024-01-14', sum_insured=500000.0, premium_amount=15000.0, policy_status='active'),\n",
-       " Policy(policy_id='POL2023002', customer_id=2, policy_type='Car', insurer_name='ICICI Lombard', start_date='2023-03-20', end_date='2024-03-19', sum_insured=750000.0, premium_amount=22000.0, policy_status='active'),\n",
-       " Policy(policy_id='POL2022003', customer_id=3, policy_type='Life', insurer_name='LIC', start_date='2022-06-01', end_date='2042-06-01', sum_insured=10000000.0, premium_amount=50000.0, policy_status='active'),\n",
-       " Policy(policy_id='POL2023004', customer_id=4, policy_type='Fire', insurer_name='HDFC ERGO', start_date='2023-05-10', end_date='2024-05-09', sum_insured=2500000.0, premium_amount=8000.0, policy_status='expired'),\n",
-       " Policy(policy_id='POL2023005', customer_id=1, policy_type='Car', insurer_name='Go Digit', start_date='2023-08-01', end_date='2024-07-31', sum_insured=600000.0, premium_amount=18000.0, policy_status='active'),\n",
-       " Policy(policy_id='POL2021006', customer_id=5, policy_type='Health', insurer_name='Care Health Insurance', start_date='2021-09-01', end_date='2022-08-31', sum_insured=300000.0, premium_amount=12000.0, policy_status='cancelled')]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "customers"
+    "# --- 5. Ask Questions (Static List) ---\n",
+    "print(\"\\n--- RAG System Ready ---\")\n",
+    "\n",
+    "# Define your static list of questions\n",
+    "static_questions = [\n",
+    "    \"Can you tell me about the company overview of evergreen assurance ltd?\",\n",
+    "]\n",
+    "\n",
+    "for i, question in enumerate(static_questions):\n",
+    "    print(f\"\\n--- Processing Question {i+1}/{len(static_questions)} ---\")\n",
+    "    print(f\"Question: {question}\")\n",
+    "    \n",
+    "    print(\"\\nSearching for relevant information...\")\n",
+    "    response = retrieval_chain.invoke({\"input\": question})\n",
+    "\n",
+    "    print(\"\\n--- Answer ---\")\n",
+    "    print(response[\"answer\"])\n",
+    "    print(\"\\n--- Sources (if available) ---\")\n",
+    "    if \"context\" in response:\n",
+    "        sorted_context = sorted(response[\"context\"], key=lambda doc: (doc.metadata.get('source', ''), doc.metadata.get('page', 0)))\n",
+    "        seen_sources = set()\n",
+    "        for doc in sorted_context:\n",
+    "            source_info = f\"Source: {doc.metadata.get('source', 'N/A')}\"\n",
+    "            page_info = f\"Page: {doc.metadata.get('page', 'N/A')}\"\n",
+    "            \n",
+    "            if (source_info, page_info) not in seen_sources:\n",
+    "                print(f\"- {source_info}, {page_info}\")\n",
+    "                seen_sources.add((source_info, page_info))\n",
+    "    else:\n",
+    "        print(\"No specific sources found in context.\")\n",
+    "    print(\"-\" * 30)\n",
+    "\n",
+    "print(\"\\n--- All static questions processed. Exiting. ---\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44de14e6",
+   "id": "fa4c9405",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -162,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
